[package]
name = "missingparts"
version = "0.1.0"
authors = ["Tamas Weisz <weisztoma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"
serde = { version = "1.0.x", features = ["derive"] }
serde_json = "1.0.x"
json5 = "0.2.5"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
http = "0.2"
hyper = "0.13"
chashmap = "2.2.x"

[profile.dev]
opt-level = 0      # controls the `--opt-level` the compiler builds with.
                   # 0-1 is good for debugging. 2 is well-optimized. Max is 3.
                   # 's' attempts to reduce size, 'z' reduces size even more.
debug = true       # (u32 or bool) Include debug information (debug symbols).
                   # Equivalent to `-C debuginfo=2` compiler flag.
debug-assertions = true # controls whether debug assertions are enabled
                   # (e.g., debug_assert!() and arithmetic overflow checks)
panic = 'unwind'   # panic strategy (`-C panic=...`), can also be 'abort'
